Bug 777259 - Launch VolumeService earlier to prevent races on retrieving Volume information